--- a/inline_tiles/inline_tiles.html
+++ b/inline_tiles/inline_tiles.html
@@ -25,6 +25,7 @@
 .dress_tiles div {
 	width: 240px;
 	margin-right: 20px;
+	margin-bottom: 20px;
 	display: -moz-inline-stack; /*firefox 2 inline-block hack*/
 	display: inline-block;
 	zoom: 1; /*ie6/7 inline-block hack*/
@@ -43,14 +44,24 @@
 		<a href="amlink:/s/ref=clo_drssshp_colrblksrh?node=6576696011"><img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/DRESS/SPRING_3/trend_.jpg">
 		</a>
 	</div>	
-
 	<div>
 		<a href="amlink:/s/ref=clo_drssshp_lacesrh?node=6576697011"><img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/DRESS/SPRING_3/trend_2.jpg">
 		</a>
 	</div>
-
 	<div class="last_tile">
 		<a href="amlink:/s/ref=clo_drssshp_fitflrsrh?node=6411506011"><img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/DRESS/SPRING_3/trend_3a.jpg">
+		</a>
+	</div>
+	<div>
+		<a href="amlink:/s/ref=clo_drssshp_brghflsrh?node=6576701011"><img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/DRESS/SPRING_3/trend_4.jpg">
+		</a>
+	</div>	
+	<div>
+		<a href="amlink:/s/ref=clo_drssshp_shiftsrh?node=6411508011"><img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/DRESS/SPRING_3/trend_5.jpg">
+		</a>
+	</div>
+	<div class="last_tile">
+		<a href="amlink:/s/ref=clo_drssshp_shrtsrh?node=6411507011"><img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/CLOTHING/SHOPS/DRESS/SPRING_3/trend_6.jpg">
 		</a>
 	</div>
 	
