add image headers

--- a/inline_tiles/inline_tiles.html
+++ b/inline_tiles/inline_tiles.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Dress Shop Tiles</title>
+	<title>Inline Tiles Widget</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
 	width: 240px;
 	margin-right: 20px;
 	margin-bottom: 20px;
-	display: -moz-inline-stack; /*firefox 2 inline-block hack*/
+	display: -moz-inline-stack; /*firefox 2 inline-block hack - needs to be before inline-block display*/
 	display: inline-block;
 	zoom: 1; /*ie6/7 inline-block hack*/
 	*display: inline; /*ie6/7 inline-block hack*/
