added email templates

--- a/inline_tiles/inline_tiles.html
+++ b/inline_tiles/inline_tiles.html
@@ -8,6 +8,11 @@
 
 <!-- BEGIN CONTENT SYMPHONY CODE -->
 
+<!-- 
+Amazon Fashion Inline Tiles Widget
+Author: pcosta@
+ -->
+
 <style>
 
 .apparel_tiles {
