--- a/af_slider/slider_dresses.html
+++ b/af_slider/slider_dresses.html
@@ -255,9 +255,10 @@ i+"</li>"),k.css({background:"url("+a.bulletThumbLocation+w+") no-repeat"});c.ch
 <script type="text/javascript">
      $(window).load(function() {
          $('#af_slider').orbit({
-		     animation: 'horizontal-slide',                  // fade, horizontal-slide, vertical-slide, horizontal-push
-		     animationSpeed: 1000,                // how fast animtions are
-		     timer: true, 			 // true or false to have the timer
+		     animation: 'horizontal-push',                  // fade, horizontal-slide, vertical-slide, horizontal-push
+		     animationSpeed: 450,                // how fast animtions are
+		     timer: false, 			 // true or false to have the timer
+             bullets: true,
          });
      });
 </script>
