minor changes to jcarousel widget

--- a/af_slider/recipes_hao.html
+++ b/af_slider/recipes_hao.html
@@ -192,7 +192,7 @@ zoom: 1;
       </div>
       
       <div class="vxd-carousel-billboard-control-awrap" id="vxdcontrol-3">
-	      <div class="vxd-carousel-thumbnail-container">
+	      <div class="vxd-carousel-thumbnail-container last">
 		      <div class="vxd-carousel-thumbnail">
 			      <div class="vxd-carousel-thumbnail-text">
 				      <span class="vxd-carousel-thumbnail-title">Men</span><br/>
@@ -339,7 +339,7 @@ jQuery(document).ready(function() {
         visible: 1,
         wrap: 'both',
         vertical: false,
-        auto: 5,
+        auto: 0,
         size: vxdCarouselItemList.length,
         animation: 500,
         initCallback: vxdCarousel_initCallback,
