--- a/af_slider/recipes_hao.html
+++ b/af_slider/recipes_hao.html
@@ -107,12 +107,12 @@ zoom: 1;
 	overflow: hidden;
 	max-width: 100%;
 	text-decoration: none !important;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #242424;
 	padding: 0;
 }
 
 #vxd-carousel-billboard-control .vxd-carousel-thumbnail-container.first {
-	border-top: 1px solid black;
+	border-top: 1px solid #101010;
 }
 
 #vxd-carousel-billboard-control .vxd-carousel-thumbnail-container.last {
@@ -137,8 +137,18 @@ zoom: 1;
 	
 }
 
+#vxd-carousel-billboard-control .vxd-carousel-header {
+	text-align: left;
+	color: #333;
+	font-family: arial, sans-serif;
+	font-size: 14px;
+	padding: 0 0 5px 10px;
+	position: relative;
+	
+}
+
 #vxd-carousel-billboard-control .vxd-carousel-thumbnail.active {
-	background: black;
+	background: #242424;
 	color: white;
 /*	margin-left: 8px;
 	padding-right: 8px;*/
@@ -179,8 +189,8 @@ zoom: 1;
   <div class="vxd-carousel-billboard"><div id="vxdCarousel" class="jcarousel-container jcarousel-container-vertical">
     
     <div id="vxd-carousel-billboard-control">
-      <div class="vxd-carousel-billboard-header">
-		<span>Trends & Features:</span>
+      <div class="vxd-carousel-header">
+		<span>Summer Trends & Features</span>
       </div>
 
 
