--- a/airy_tcg_billboard/Airy_TCG_VIDEO.html
+++ b/airy_tcg_billboard/Airy_TCG_VIDEO.html
@@ -78,32 +78,28 @@
 <script type="text/javascript">
     
 (function (e) {
-    function s() {
-        var e = -1;
+
+    // figure out which version of IE we're dealing with
+    function checkVersionIE() {
+        var versionNumber = -1;
         if (navigator.appName == "Microsoft Internet Explorer") {
-            var t = navigator.userAgent;
-            var n = new RegExp("MSIE([0-9]{1,}[.0-9]{0,})");
-            if (n.exec(t) != null) {
-                e = parseFloat(RegExp.$1)
+            var userAgent = navigator.userAgent;
+            var ieRegex = new RegExp("MSIE([0-9]{1,}[.0-9]{0,})");
+            if (ieRegex.exec(userAgent) != null) {
+                versionNumber = parseFloat(RegExp.$1)
             }
         }
-        return e
+        return versionNumber;
     }
+
     var t = function (e) {
-        var t = Airy.embed({
+        var fashionPlayer = Airy.embed({
             parentId: "asin-video-container",
             streamingUrls: ["wsrp_rewrite?rw_urltype=resource&rw_resourcetype=url&rw_imagetype=general&rw_name=AMAZON_FASHION/2013/GATEWAY/FALL1/VIDEO/TEST/billboard_760x490.mp4/wsrp_rewrite"],
             desiredMode: "hybrid",
             flashParams: {
                 wmode: "transparent"
             },
-            cuePoints: [{
-                callback: function (cuePointValue, type, eventContext) {
-					console.log("cuepoint fired");
-                },
-                type: "position",
-                values: 3
-            }],
             bindings: {
                 play: function (eventObject, eventContext) {
                     e("#asin-video-container > div").css("background-color", "transparent")
@@ -111,7 +107,6 @@
                 ended: function (eventObject, eventContext) {
                     e("#asin-video-container").remove()
                 },
-				
 				canplay: function (eventObject, eventContext) {
                     e("#asin-video-slate").css("z-index", -1);
                     e("#asin-video-slate img").attr("src", "wsrp_rewrite?rw_urltype=resource&rw_resourcetype=url&rw_imagetype=general&rw_name=/AMAZON_FASHION/2013/GATEWAY/FALL1/VIDEO/TEST/exit_slate/wsrp_rewrite");
@@ -121,32 +116,37 @@
                 bufferTimeSeconds: 2,
                 rebufferTimeSeconds: 2
             },
+            // IE is having difficulty with the swf renderer when you reload the page, cachebust by adding date to the url
             swfUrl: "wsrp_rewrite?rw_urltype=resource&rw_resourcetype=url&rw_imagetype=general&rw_name=vap/video/airy2/prod/318.0-0/flash/AiryBasicRenderer.swf/wsrp_rewrite?" + new Date,
         });
-        t.play();
+
+        //since video autoplay requires a skin for the player chrome, we'll play within the initialization
+        fashionPlayer.play();
     };
-    var n = s();
+
+    var n = checkVersionIE();
     var r = navigator.userAgent.match(/cloud9|android|silk-accelerated|blackberry|iphone|ipad|ipod|opera mini|iemobile/i);
-    if (!e.hasVideoOnGatewayLoaded && !r) {
+
+    if (!e.hasVideoOnGatewayLoaded && !r) { // don't load it twice, and on't load it for these mobile useragents
         if (n < 0 || n > 7) {
             e.hasVideoOnGatewayLoaded = true;
             var i = "wsrp_rewrite?rw_urltype=resource&rw_resourcetype=url&rw_imagetype=general&rw_name=vap/video/airy2/prod/318.0-0/js/airy.js/wsrp_rewrite";
-            if (typeof e.P === "object") {
+            if (typeof e.P === "object") { // load for amazon framework which is only live in weblab tests
                 e.P.when("ready").execute(function () {
-                    P.load.js(i)
+                    P.load.js(i);
                 });
-                e.P.when("A").execute(function (n) {
+                e.P.when("A").execute(function (n) { 
                     e.P.when("Airy").execute(function (e) {
-                        t(n.$)
-                    })
-                })
+                        t(n.$); // pass amazon framework jquery prefix through to initialization function
+                    });
+                });
             } else {
-                e.amznJQ.onReady("jQuery", function () {
+                e.amznJQ.onReady("jQuery", function () { // if the new framework isn't live, load via jQuery
                     e.amznJQ.addLogical("Airy", [i]);
                     e.amznJQ.available("Airy", function () {
-                        t(jQuery)
-                    })
-                })
+                        t(jQuery); // pass jquery prefix through to initialization function
+                    });
+                });
             }
         }
     }
