adjusted anchor positioning to include divider

--- a/fitguide_running_shoes/fitguide.html
+++ b/fitguide_running_shoes/fitguide.html
@@ -37,23 +37,24 @@
 		<div class="clear"></div>
 	  </div>
 
-	<div class="af-spacing"></div>
-	<div class="af-divider"></div>
+
 
 </div>
 <!-- end header -->
 
 <!-- start section 1 -->
 <div class="container_12" id="af-section1">
+	<div class="af-spacing"></div>
+	<div class="af-divider"></div>
 
 	<h2>1. Fit and Feel
 	</h2>
 
 	<div class="grid_4">
-		<p style="padding-top: 73px">A running shoe is made up of three basic components: the upper, the midsole, and the outsole. The upper and lining determine how the running shoe feels on your foot while the midsole and outsole combine to cushion and support your stride. Here's a quick look at the components that make up a running shoe and how each should feel on your foot.</p>
+		<p style="padding-top: 20px">A running shoe is made up of three basic components: the upper, the midsole, and the outsole. The upper and lining determine how the running shoe feels on your foot while the midsole and outsole combine to cushion and support your stride. Here's a quick look at the components that make up a running shoe and how each should feel on your foot.</p>
 </div>
 	<div class="grid_8">
-		<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/SHOES/EDITORIAL/10_FALL_2/Fit_Guide/Fit_Guide_Diagram._V357783030_.jpg">
+		<img src="https://images-na.ssl-images-amazon.com/images/G/01/AMAZON_FASHION/2013/SHOES/EDITORIAL/10_FALL_2/Fit_Guide/Fit_Guide_Diagram_alt.jpg">
 	</div>
 	<div class="clear"></div>
 
@@ -101,15 +102,15 @@
 		</table>
 	</div>
 	<div class="clear"></div>
-	<div class="af-spacing"></div>
-	<div class="af-divider"></div>
+
 
 </div>
 <!-- end section 1 -->
 
 <!-- start section 2 -->
 <div class="container_12" id="af-section2">
-
+	<div class="af-spacing"></div>
+	<div class="af-divider"></div>
 	<h2>2. Pronation
 	</h2>
 
@@ -203,14 +204,13 @@
 	<div class="clear"></div>	
 	</div>
 
-	<div class="af-spacing"></div>
-	<div class="af-divider"></div>
-
 </div>
 <!-- end section 2 -->
 
 <!-- start section 3 -->
 <div class="container_12" id="af-section3">
+	<div class="af-spacing"></div>
+	<div class="af-divider"></div>
 
 	<h2>3. Heel Drop and Footstrike
 	</h2>
@@ -255,8 +255,7 @@
 	</div>
 	<div class="clear"></div>
 
-	<div class="af-spacing"></div>
-	<div class="af-divider"></div>
+
 
 </div>
 <!-- end section 3 -->
@@ -264,6 +263,9 @@
 
 <!-- start section 4 -->
 <div class="container_12" id="af-section4">
+
+	<div class="af-spacing"></div>
+	<div class="af-divider"></div>
 
 	<h2>4. Running Surface and Activity
 	</h2>
